--- a/open_service_x/src/main/res/layout/activity_main.xml
+++ b/open_service_x/src/main/res/layout/activity_main.xml
@@ -71,6 +71,12 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="onsend"
+                    android:text="发送短信" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:onClick="onLoad"
                     android:text="加载H5页面" />
 
